# jeepyb

./: requirements.txt  setup.cfg
jeepyb/: jeepyb_settings.py  utils.py
jeepyb/cmd/: manage_projects.py  track_upstream.py
jeepyb/gerrit/: __init__.py  gerritapi.py  gerritrestapi.py
